CI: Maintenance, update checkout, setup-node and cache to v2
 - Update copyright year
 - Run on PRs
 - Use v2 of checkout, setup-node and cache (for faster performance)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
-# Copyright 2020 Signal Messenger, LLC
+# Copyright 2021 Signal Messenger, LLC
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: CI
-
-on: [push]
+on: [push, pull_request]
 
 jobs:
   lint:
@@ -12,14 +11,14 @@ jobs:
     steps:
     - run: lsb_release -a
     - run: uname -a
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
       with:
         node-version: '12.13.0'
     - run: npm install -g yarn@1.22.0
 
     - name: Cache node modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       env:
         cache-name: cache-node-modules
       with:
@@ -40,14 +39,14 @@ jobs:
 
     steps:
     - run: uname -a
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
       with:
         node-version: '12.13.0'
     - run: npm install -g yarn@1.22.0
 
     - name: Cache node modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       env:
         cache-name: cache-node-modules
       with:
@@ -72,15 +71,15 @@ jobs:
     steps:
     - run: lsb_release -a
     - run: uname -a
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
       with:
         node-version: '12.13.0'
     - run: sudo apt-get install xvfb
     - run: npm install -g yarn@1.22.0
 
     - name: Cache node modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       env:
         cache-name: cache-node-modules
       with:
@@ -109,14 +108,14 @@ jobs:
     - run: systeminfo
     - run: git config --global core.autocrlf false
     - run: git config --global core.eol lf
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
       with:
         node-version: '12.13.0'
     - run: npm install -g yarn@1.22.0
 
     - name: Cache node modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       env:
         cache-name: cache-node-modules
       with:
