--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,15 +22,8 @@ jobs:
         node-version: '12.13.0'
     - run: npm install -g yarn@1.22.0
 
-    - name: Cache node modules
-      uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('yarn.lock') }}-${{ hashFiles('patches/*') }}
-
     - run: set npm_config_arch=${{ matrix.arch }}
+      shell: cmd
     - run: yarn install --frozen-lockfile
     - run: yarn generate
     - run: yarn lint
