--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,12 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '12.13.0'
-    - run: npm install -g yarn@1.22.0
-
     - run: set npm_config_arch=${{ matrix.arch }}
       shell: cmd
-    - run: yarn install --frozen-lockfile
+    - run: npm install -g yarn@1.22.0
+    - run: set npm_config_arch=${{ matrix.arch }}
+      shell: cmd
+    - run: yarn install
     - run: yarn generate
     - run: yarn lint
     - run: node build\grunt.js
