--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: '12.13.0'
+        node-version: 12
     - run: set npm_config_arch=${{ matrix.arch }}
       shell: cmd
-    - run: npm install -g yarn@1.22.0
+    - run: npm install -g yarn
     - run: set npm_config_arch=${{ matrix.arch }}
       shell: cmd
     - run: yarn install
