--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '12.14.1'
-    - run: set npm_config_arch=${{ matrix.arch }}
-      shell: cmd
     - run: npm install -g yarn
-    - run: set npm_config_arch=${{ matrix.arch }}
-      shell: cmd
+    - shell: cmd
+      run: |
+        set npm_config_arch=${{ matrix.arch }}
+        npm config set msvs_version=2019 --global
     - run: yarn install
     - run: yarn generate
     - run: yarn lint
