--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         cache-name: cache-node-modules
       with:
         path: node_modules
-        key: ${{ runner.os }}-${{ matrix.arch }}-node_modules-${{ hashFiles('yarn.lock') }}-${{ hashFiles('patches/*') }}
+        key: ${{ runner.os }}-${{ matrix.arch }}-node_modules-${{ hashFiles('package.json') }}
 
     - run: yarn install
     - run: yarn generate
