--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         node-version: '12.15.0'
     - run: npm install -g yarn
+    - run: npm install -g node-gyp@5.1.0
 
     - name: Cache node modules
       uses: actions/cache@v2
