--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
         path: node_modules
         key: ${{ runner.os }}-${{ matrix.arch }}-node_modules-${{ hashFiles('package.json') }}
 
+    - run: curl -O C:\\Users\\runneradmin\\AppData\\Local\\node-gyp\\Cache\\12.15.0\\arm64\\node.lib https://unofficial-builds.nodejs.org/download/release/v12.15.0/win-arm64/node.lib
     - run: yarn install
     - run: yarn generate
     - run: yarn lint
