--- a/package.json
+++ b/package.json
@@ -251,7 +251,7 @@
     "sass-loader": "7.2.0",
     "sinon": "9.2.0",
     "snyk": "1.316.1",
-    "spectron": "5.0.0",
+    "spectron": "^10.0.0",
     "style-loader": "1.0.0",
     "ts-loader": "4.1.0",
     "ts-node": "8.3.0",
