--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         key: ${{ runner.os }}-${{ matrix.arch }}-node_modules-${{ hashFiles('package.json') }}
 
     - run: curl -s -S --create-dirs -o C:/Users/runneradmin/AppData/Local/node-gyp/Cache/12.15.0/arm64/node.lib https://unofficial-builds.nodejs.org/download/release/v12.15.0/win-arm64/node.lib
+      if: matrix.arch == 'arm64'
     - run: yarn install
     - run: yarn generate
     - run: node build\grunt.js
